check_short_2.txt
warning: fields `size` and `queue_offset` are never read
  --> crates\dx-core\src\lib.rs:94:5
   |
90 | pub struct MemoryManager {
   |            ------------- fields in this struct
...
94 |     size: usize,
   |     ^^^^
...
98 |     queue_offset: AtomicU32,
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `dx-core` (lib) generated 1 warning
warning: unused variable: `op`
   --> crates\dx-morph\src\lib.rs:341:13
    |
341 |         for op in ops {
    |             ^^ help: if this is intentional, prefix it with an underscore: `_op`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `dx-morph` (lib) generated 1 warning
    Checking dx-server v0.1.0 (F:\Code\dx-www-runtime\crates\dx-server)
crates\dx-server\src\ssr.rs:103:1: error[E0428]: the name `is_bot` is defined multiple times: `is_bot` redefined here
crates\dx-server\src\lib.rs:108:50: error[E0425]: cannot find value `serve_binary` in module `handlers`: not found in `handlers`
crates\dx-server\src\lib.rs:109:49: error[E0425]: cannot find value `serve_delta` in module `handlers`: not found in `handlers`
crates\dx-server\src\handlers.rs:5:13: warning: unused import: `ssr::is_bot`
crates\dx-server\src\handlers.rs:7:5: warning: unused imports: `Path`, `Response`, and `body::Body`
crates\dx-server\src\lib.rs:39:20: warning: unused import: `post`
crates\dx-server\src\lib.rs:111:34: error[E0277]: the trait bound `fn(String, ServerState) -> impl Future<Output = impl IntoResponse> {serve_ssr}: Handler<_, _>` is not satisfied: the trait `Handler<_, _>` is not implemented for fn item `fn(String, ServerState) -> impl Future<Output = impl IntoResponse> {serve_ssr}`
warning: `dx-server` (lib) generated 3 warnings
error: could not compile `dx-server` (lib) due to 4 previous errors; 3 warnings emitted
